# hhapi

./: .gitignore  pyproject.toml
src/hhapi/: apijob.py  apijobhh.py  datajob.py  datajobhhjson.py  main.py  vacancyhh.py
tests/: conftest.py  test_apijobhh.py  test_datajobhhjson.py  test_vacancyhh.py
