[tool.poetry]
name = "hhapi"
version = "0.1.0"
description = ""
authors = ["Дмитрий Кукуйский <kukuiski@gmail.com>"]
readme = "README.md"
packages = [{include = "hhapi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
