[tool.poetry]
name = "hhapi"
version = "0.1.0"
description = ""
authors = ["Дмитрий Кукуйский <kukuiski@gmail.com>"]
readme = "README.md"
packages = [{include = "hhapi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
